@@ -364,7 +364,7 @@ static size_t inttomb(char *s, const int wc)
 SEXP attribute_hidden do_intToUtf8(SEXP call, SEXP op, SEXP args, SEXP env)
 {
     SEXP ans, x;
-    int multiple;
+    int multiple, s_pair;
     size_t used, len;
     char buf[10], *tmp;
 
@@ -375,18 +375,19 @@ SEXP attribute_hidden do_intToUtf8(SEXP call, SEXP op, SEXP args, SEXP env)
     multiple = asLogical(CADR(args));
     if (multiple == NA_LOGICAL)
         error(_("argument 'multiple' must be TRUE or FALSE"));
-    /*
-    Could handle surrogate pairs here,
-    but they should not occur in UTF-32.
-    */
+    s_pair = asLogical(CADDR(args));
+    if (s_pair == NA_LOGICAL)
+        error(_("argument 'allow_surrogate_pairs' must be TRUE or FALSE"));
     if (multiple)
     {
+        if (s_pair)
+            warning("allow_surrogate_pairs = TRUE is incompatible with multiple = TRUE and will be ignored");
         R_xlen_t i, nc = XLENGTH(x);
         PROTECT(ans = allocVector(STRSXP, nc));
         for (i = 0; i < nc; i++)
         {
             int this = INTEGER(x)[i];
-            if (this == NA_INTEGER || (this >= 0xD800 && this <= 0xDFFF))
+            if (this == NA_INTEGER || (this >= 0xD800 && this <= 0xDFFF) || this > 0x10FFFF)
                 SET_STRING_ELT(ans, i, NA_STRING);
             else
             {
@@ -405,12 +406,29 @@ SEXP attribute_hidden do_intToUtf8(SEXP call, SEXP op, SEXP args, SEXP env)
         for (i = 0, len = 0; i < nc; i++)
         {
             int this = INTEGER(x)[i];
-            if (this == NA_INTEGER || (this >= 0xD800 && this <= 0xDFFF))
+            if (this == NA_INTEGER || (this >= 0xDC00 && this <= 0xDFFF) || this > 0x10FFFF)
             {
                 haveNA = TRUE;
                 break;
             }
-            len += inttomb(NULL, this);
+            else if (this >= 0xD800 && this <= 0xDBFF)
+            {
+                if (!s_pair || i >= nc - 1)
+                {
+                    haveNA = TRUE;
+                    break;
+                }
+                int next = INTEGER(x)[i + 1];
+                if (next >= 0xDC00 && next <= 0xDFFF)
+                    i++;
+                else
+                {
+                    haveNA = TRUE;
+                    break;
+                }
+            }
+            else
+                len += inttomb(NULL, this);
         }
         if (haveNA)
         {
@@ -431,7 +449,15 @@ SEXP attribute_hidden do_intToUtf8(SEXP call, SEXP op, SEXP args, SEXP env)
         }
         for (i = 0, len = 0; i < nc; i++)
         {
-            used = inttomb(buf, INTEGER(x)[i]);
+            int this = INTEGER(x)[i];
+            if (s_pair && (this >= 0xD800 && this <= 0xDBFF))
+            {
+                // all the validity checking has already been done.
+                int next = INTEGER(x)[++i];
+                unsigned int hi = this - 0xD800, lo = next - 0xDC00;
+                this = 0x10000 + (hi << 10) + lo;
+            }
+            used = inttomb(buf, this);
             strncpy(tmp + len, buf, used);
             len += used;
         }
